@@ -1,3 +1,9 @@
+2007-07-01  Vitaly Alexeev <tishka92@yahoo.com>
+
+	Snapshot of movieclip of any nesting level is done properly
+ 	* gameswf/gameswf_video_ogl.cpp
+ 	* gameswf/plugins/lib3ds/gameswf_3ds.cpp
+
 2007-06-28  Vitaly Alexeev <tishka92@yahoo.com>
 
 	Snapshot of movieclip is used as texture for 3D model !
